# mgc-sdk-python

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
examples/block_storage/snapshot/: create_snapshot.py  delete_snapshot.py  get_snapshot.py  list_snapshots.py  rename_snapshot.py
examples/block_storage/volume/: attach_volume.py  create_volume.py  delete_volume.py  extend_volume.py  get_volume.py  list_volume_types.py  list_volumes.py  rename_volume.py  retype_volume.py
examples/compute/backup/: copy_backup.py  create_backup.py  delete_backup.py  get_backup.py  list_backups.py  rename_backup.py  restore_backup.py
examples/compute/images/: list_images.py
examples/compute/snapshot/: create_snapshot.py  delete_snapshot.py  get_snapshot.py  list_snapshots.py  restore_snapshot.py
examples/compute/virtual_machine/: create_virtual_machine.py  delete_virtual_machine.py  get_virtual_machine.py  list_machine_types.py  list_virtual_machines.py  reboot_virtual_machine.py  rename_virtual_machine.py  retype_virtual_machine.py  start_virtual_machine.py  stop_virtual_machine.py  suspend_virtual_machine.py
src/mgc/: auth.py  client.py  config.py  exceptions.py  region.py  transport.py
tests/: test_client.py  test_config.py  test_region.py  test_transport.py
tests/resources/block_storage/: conftest.py  test_block_storage.py  test_snapshots.py  test_volumes.py
tests/resources/compute/: test_backups.py  test_compute.py  test_images.py  test_machine_types.py  test_snapshots.py  test_virtual_machines.py
(+9 files in other folders)
